fixed scrollbar bug

--- a/google_code_in/spell_checker_interface/jsDw/style.css
+++ b/google_code_in/spell_checker_interface/jsDw/style.css
@@ -17,6 +17,7 @@ h1 {
     padding: 4px;
     margin: 0 auto;
     display: block;
+    overflow: hidden;
 }
 #textAreaId:hover {
     box-shadow: inset 0 0 4px gray;
